# CloudAgent

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEV.md  DEV.zh-CN.md  README.md
apps/agentd/: Cargo.toml
apps/agentd/src/: main.rs  runtime_manager.rs
apps/cloudagent/: Cargo.toml
apps/cloudagent/src/: main.rs  product.rs
apps/cloudagent/tests/: release_tag_semver.rs
apps/gatewayd/: Cargo.toml
apps/gatewayd/src/: main.rs
apps/gatewayd/src/node/: command_router.rs  conversation_execution.rs  conversation_registry.rs  data_root.rs  device_settings.rs  message_sync.rs  mod.rs  platform_manager.rs  runtime.rs  server.rs  session_state.rs  source.rs  worker_manager.rs
apps/node/: Cargo.toml
apps/node/src/node/: command_router.rs  conversation_execution.rs  conversation_execution_tests.rs  conversation_registry.rs  data_root.rs  device_settings.rs  message_sync.rs  message_sync_tests.rs  mod.rs  runtime.rs  server.rs  session_listing.rs  session_listing_tests.rs  session_state.rs  source.rs  test_support.rs  worker_manager.rs
cli/: Cargo.toml  build.rs
cli/src/: active_runtime.rs  active_runtime_tests.rs  agent_host.rs  approval_overlay.rs  bottom_pane.rs  bottom_pane_view.rs  chat_composer.rs  composer.rs  console.rs  console_client.rs  console_entry.rs  console_events.rs  console_parse.rs  console_state.rs  footer.rs  history_cell.rs  input_pane.rs  lib.rs  local_node.rs  main.rs  runtime_metrics_display.rs  runtime_metrics_display_tests.rs  terminal_runtime.rs  text_width.rs  tool_identity.rs  welcome.rs
cli/src/app/: actions.rs  cli_settings.rs  clipboard_paste.rs  conversation_facade.rs  core.rs  effects.rs  event_router.rs  facade.rs  filter_toggle.rs  items.rs  llm_config.rs  mod.rs  model_catalog.rs  parse.rs  runtime_loop.rs  session.rs  tests.rs
cli/src/app/commands/: filter_toggle.rs  mod.rs  parse.rs  permission_profile.rs  permissions_mode.rs
cli/src/app/config/: llm_config.rs  mod.rs
cli/src/app/conversation/: actions.rs  event_router.rs  exploration.rs  facade.rs  image_paste.rs  items.rs  live_state_controller.rs  mod.rs  projection.rs
cli/src/app/core/: active_cell_controller.rs  active_transcript_scroll.rs  active_turn.rs  committed_transcript_store.rs  conversation_state.rs  history_buffer.rs  history_replay.rs  input_mapping.rs  live_transcript.rs  mod.rs  render_bridge.rs  running_turn_restore.rs  running_turn_restore_tests.rs  streaming.rs  transcript_owner.rs  transcript_projection.rs  transcript_projection_tests.rs  transcript_scroll.rs  types.rs
cli/src/app/input/: clipboard_paste.rs  mod.rs
cli/src/app/model_catalog/: cache.rs  mod.rs  refresh.rs  runtime.rs  runtime_tests.rs  source.rs  source_tests.rs
cli/src/app/runtime/: controller.rs  controller_tests.rs  display.rs  lifecycle.rs  loop.rs  mod.rs  paste_coordinator.rs  paste_coordinator_tests.rs  projection.rs  render_gate.rs  render_pass.rs  scrollback_browse.rs  terminal_projection.rs  terminal_projection_tests.rs  viewport_height.rs  viewport_height_tests.rs
cli/src/app/tests/: mod.rs  ui_state.rs
cli/src/input/: command_dispatch.rs  completion.rs  intent.rs  keymap.rs  keymap_tests.rs  mod.rs  slash_command.rs
cli/src/state/: bottom_pane_controller.rs  bottom_pane_controller_tests.rs  bottom_pane_runtime.rs  bottom_pane_runtime_tests.rs  live_state.rs  mod.rs  notification.rs  notification_store.rs  reducer.rs  reducer_messages.rs  reducer_messages_tests.rs  reducer_routes.rs  reducer_tests.rs  runtime_projection.rs  selectors.rs  status_view_model.rs  turn_lifecycle.rs
cli/src/state/bottom_pane_controller/: tests.rs
cli/src/state/reducer/: tests.rs
cli/src/terminal/: color_compat.rs  color_compat_tests.rs  custom_terminal.rs  custom_terminal_tests.rs  draw_coordinator.rs  events.rs  events_tests.rs  frame.rs  history_flush_queue.rs  history_replay.rs  history_replay_tests.rs  inline_viewport.rs  insert_history.rs  keyboard_modes.rs  mod.rs  resize_reflow_cap.rs  surface.rs
cli/src/transport/: client.rs  mod.rs
cli/src/ui/: chat_surface.rs  chat_surface_model.rs  mod.rs  screen.rs  transcript_line_builder.rs  transcript_line_builder_tests.rs  transcript_render_cache.rs
cli/src/ui/theme/: history.rs  (+9 more)
cli/wix/: License.rtf  main.wxs
crates/agent-app-server/: Cargo.toml  README.md
crates/agent-app-server-client/: Cargo.toml  README.md
crates/agent-app-server-client/src/: in_process.rs  lib.rs  lib_tests.rs  local_node.rs  remote.rs  stdio.rs
crates/agent-app-server/src/: approval_coordinator.rs  command_router.rs  conversation_cursor.rs  conversation_listener.rs  conversation_processor.rs  conversation_service.rs  conversation_subscriptions.rs  in_process.rs  lib.rs  notification_service.rs  server_request_coordinator.rs  server_request_service.rs  session_subscriptions.rs  turn_bridge.rs  turn_service.rs
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/src/: error.rs  lib.rs  output_truncation.rs  output_truncation_tests.rs  runtime_item.rs  runtime_item_tests.rs  web_search_presentation.rs  web_search_presentation_tests.rs
crates/agent-gateway/: Cargo.toml
crates/agent-gateway/src/: app_server_mapping.rs  app_server_mapping_tests.rs  config.rs  gateway_event.rs  gateway_outbound.rs  lib.rs  message.rs  outbound.rs  platform.rs  runtime.rs  session.rs
crates/agent-model-provider/: Cargo.toml
crates/agent-model-provider/src/: config.rs  error.rs  event.rs  lib.rs  openai_compatible.rs  request.rs
crates/agent-runtime/: Cargo.toml  README.md
crates/agent-runtime/src/: audit.rs  conversation_queries.rs  lib.rs  observability.rs  rollout_recorder.rs
crates/agent-tools/: Cargo.toml  README.md
crates/agent-tools/src/: command_access.rs  lib.rs
crates/infra-http/: Cargo.toml
crates/infra-http/src/: error.rs  lib.rs  stream.rs  transport.rs
crates/infra-store/: Cargo.toml
crates/infra-store/src/: lib.rs  memory_repo.rs  rollout_log.rs  rollout_recorder.rs  session_index.rs  session_list_optimization_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory_repo.rs  session_index.rs
(+578 files in other folders)
