[workspace]
members = [
    "cli",
    "apps/agentd",
    "apps/gatewayd",
    "crates/agent-app-server",
    "crates/agent-app-server-client",
    "crates/agent-core",
    "crates/agent-gateway",
    "crates/agent-memory",
    "crates/agent-model-provider",
    "crates/agent-protocol",
    "crates/agent-scheduler",
    "crates/agent-tools",
    "crates/config",
    "crates/infra-http",
    "crates/infra-shell",
    "crates/infra-ssh",
    "crates/infra-store",
    "crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Liu Felix"]
repository = ""

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
ignore = "0.4"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
notify = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
