[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-app-server-client = { path = "../crates/agent-app-server-client" }
agent-protocol = { path = "../crates/agent-protocol" }
agent-runtime = { path = "../crates/agent-runtime" }
config = { path = "../crates/config" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-segmentation = "1.12"
unicode-width = "0.2"
textwrap = "0.16"
pulldown-cmark = { version = "0.11", default-features = false }
arboard = "3.4"
