[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-app-server-client = { path = "../crates/agent-app-server-client" }
agent-core = { path = "../crates/agent-core" }
agent-memory = { path = "../crates/agent-memory" }
agent-model-provider = { path = "../crates/agent-model-provider" }
agent-protocol = { path = "../crates/agent-protocol" }
agent-tools = { path = "../crates/agent-tools" }
config = { path = "../crates/config" }
infra-store = { path = "../crates/infra-store" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-segmentation = "1.12"
unicode-width = "0.2"
textwrap = "0.16"
pulldown-cmark = { version = "0.11", default-features = false }
arboard = "3.4"
serde_json = "1"
serde.workspace = true
rusqlite.workspace = true
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
shlex = "1"
tempfile = "3"
url = "2"
