[package]
name = "agentd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cli = { path = "../../cli" }
agent-runtime = { path = "../../crates/agent-runtime" }
config = { path = "../../crates/config" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
