[package]
name = "cloudagent"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
agent-app-server-client = { path = "../../crates/agent-app-server-client" }
agent-core = { path = "../../crates/agent-core" }
agent-protocol = { path = "../../crates/agent-protocol" }
cli = { path = "../../cli" }
config = { path = "../../crates/config" }
infra-store = { path = "../../crates/infra-store" }
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
semver = "1"
