[package]
name = "agent-app-server-client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-app-server = { path = "../agent-app-server" }
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
