[package]
name = "agent-app-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
agent-runtime = { path = "../agent-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
