[package]
name = "agent-app-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
