[package]
name = "agent-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-protocol = { path = "../agent-protocol" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
