[package]
name = "agent-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tracing.workspace = true
uuid = { version = "1", features = ["v7"] }
