[package]
name = "agent-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tracing.workspace = true
uuid = { version = "1", features = ["v7"] }
