[package]
name = "agent-model-provider"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
config = { path = "../config" }
infra-http = { path = "../infra-http" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
