[package]
name = "agent-runtime"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-memory = { path = "../agent-memory" }
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
agent-tools = { path = "../agent-tools" }
async-trait.workspace = true
chrono.workspace = true
config = { path = "../config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
storage = { path = "../storage" }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v7"] }
rusqlite.workspace = true
