[package]
name = "agent-tools"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-core = { path = "../agent-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio.workspace = true
tokio-util.workspace = true
