[package]
name = "agent-tools"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
async-trait.workspace = true
ignore.workspace = true
nucleo.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio.workspace = true
tokio-util.workspace = true
blake3 = "1"
base64 = "0.22"
