[package]
name = "infra-http"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
async-trait.workspace = true
config = { path = "../config" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
