[package]
name = "storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-protocol = { path = "../agent-protocol" }
anyhow.workspace = true
shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
